# claude-code-launcher

./: .coverage  .gitignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_typer.md  REQUIREMENT.md  SECURITY.md  SKILL_PROJECT.md  claude_launcher.py  claude_launcher_typer.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_claude_launcher.py
.claude/: README.md  config.yml
.claude/agents/: auditor.md  documenter.md  implementer.md  sdlc-orchestrator.md  verifier.md
.claude/skills/audit/: ARCHITECTURE_REVIEW.md  SECURITY_CHECKLIST.md  SKILL.md
.claude/skills/audit/scripts/: dependency_audit.sh
.claude/skills/document/: SKILL.md
.claude/skills/document/scripts/: doc_coverage.sh
.claude/skills/document/templates/: adr.md.tmpl  api-doc.md.tmpl  changelog-entry.md.tmpl
.claude/skills/implement/: SKILL.md
.claude/skills/implement/scripts/: scaffold.sh
.claude/skills/implement/templates/: class.cpp.tmpl  component.tsx.tmpl  module.py.tmpl
.claude/skills/verify/: SKILL.md
.claude/skills/verify/scripts/: coverage_check.sh
.claude/skills/verify/templates/: jest.test.ts.tmpl  test_template.py.tmpl
docs/: api_reference.md  architecture.md  contributing.md  getting_started.md
docs/adr/: 0001-claude-code-launcher-architecture.md  0001-claude-launcher-architecture.md  0001-pyside6-gui-framework.md  0002-environment-variable-storage.md  0002-yaml-configuration-format.md  0003-background-thread-downloads.md  0004-script-generation-launch.md
tests/: test_download_url.py
